syntax = "proto3";

option java_package = "com.panda.game.proto";
option java_outer_classname = "PacketPb";

package com.panda.game.proto;

//游戏包数据
message Pkg {
  int32 requestId = 1;          // 请求id
  int32 cmd = 2;                //命令号，区分不同命令
  int32 error_code = 3;         //错误码
  int64 playerId = 4;   		//玩家唯一ID
  bytes body = 5;               //包体的二进制数据
}
